parser as python file + uploading files to s3

--- a/notebooks/json_parser.ipynb
+++ b/notebooks/json_parser.ipynb
@@ -903,6 +903,39 @@
     "list.sort()\n",
     "list[:11]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import awswrangler as wr\n",
+    "import os\n",
+    "import pathlib\n",
+    "import pandas as pd\n",
+    "import boto3\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "\n",
+    "load_dotenv(find_dotenv())\n",
+    "\n",
+    "bucket = os.getenv('S3_BUCKET')\n",
+    "region = os.getenv('REGION')\n",
+    "\n",
+    "root = str(pathlib.Path().absolute()).split(\"notebooks\")[0]\n",
+    "path = root + 'notebooks/csv/transcripts-0[0-9].csv'\n",
+    "\n",
+    "my_session = boto3.Session(region_name=region, profile_name='my-dev-profile')\n",
+    "\n",
+    "def write_to_s3(df, filename, filetype):\n",
+    "    path1 = f\"s3://{bucket}/{filetype}/{filename}.csv\"\n",
+    "\n",
+    "    wr.s3.to_csv(df, path1, index=False, boto3_session=my_session)\n",
+    "    \n",
+    "df = pd.read_csv(path, index_col=0)\n",
+    "\n",
+    "write_to_s3(df, 'transcripts-0[0-9].csv', 'transcripts')"
+   ]
   }
  ],
  "metadata": {
