modified python script
now it can be run as standalone to parse files and upload to s3

--- a/notebooks/datasetToEmbeddings-Oskari.ipynb
+++ b/notebooks/datasetToEmbeddings-Oskari.ipynb
@@ -579,6 +579,23 @@
       "source": [
         "read_and_preprocess_transcripts(filepath)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 124,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Welcome back to GRE vocab.  Before we continue. We just want to give a quick shout out to the people who make this podcast possible. Anchor anchor is everything you need to make a podcast in one place. They distribute your podcast for you. They have tools that allow you to record and edit everything right from your phone or computer. It's free the even allow you to put ads in your your podcast. It's pretty awesome. Go check it out download the free anchor app or go to Anchored off dot f m-- to get started. Okay, let's get back to the show.  Today's words are fatuous, silly and pointless apocryphal.  Of doubtful authenticity, although widely circulated as being true usually in regards to a story or statement a credit e having an acrid smell accurate is having an irritant Lee Strong and unpleasant taste or smell angry bitter.  Trench in see in size of - keenness and forcefulness of thought or expression or intellect euphony the quality of being pleasing to the ear, especially through a harmonious combination of words.  Trump trump Trump trump no matter what you think of him. You got to admit. He's very entertaining especially when it comes to his tweets.  A lot of his tweets are completely fascists. Remember the the whole kafei tweet where he tweeted a word that said Kofi. I like 2:00 in the morning unbelievable. Basically all of his tweets are trenchant. He's very bold once everyone to listen every once in a while though. He'll have a rather euphonious comment. I assume those pleasing tweets are in by his professional speech writers right now is impeachment trial is  Underway, some say is conversation with Ukrainian president clearly frames it but others say it that is apocryphal. We'll just have to see what happens.  That's all for GRE vocab. We wish you guys the best of luck if you're taking the test this week.  Also, if you wouldn't mind leaving us a review the be much appreciated. Thanks so much. See you next time.\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(transcripts_df.loc[0,'transcript'])"
+      ]
     }
   ],
   "metadata": {
