--- a/notebooks/json_parser.ipynb
+++ b/notebooks/json_parser.ipynb
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,53 +860,86 @@
     "\n",
     "    return df\n",
     "\n",
-    "def parse_transcript(filepath):\n",
-    "    root = str(pathlib.Path().absolute()).split(\"notebooks\")[0]\n",
-    "    rootpath = root + filepath\n",
-    "    for path in filepath, rootpath:\n",
-    "        try:                                                           \n",
-    "            with open(path) as data_file:    \n",
-    "                data = json.load(data_file)\n",
-    "                break\n",
-    "        except Exception as e:\n",
-    "            continue\n",
-    "    else:                                               \n",
-    "        raise Exception\n",
+    "def parse_transcript(filepath, file=None, filename=None):\n",
+    "    if filepath:\n",
+    "        root = str(pathlib.Path().absolute()).split(\"notebooks\")[0]\n",
+    "        rootpath = root + filepath\n",
+    "        for path in filepath, rootpath, file:\n",
+    "            try:                                                           \n",
+    "                with open(path) as data_file:    \n",
+    "                    data = json.load(data_file)\n",
+    "                    break\n",
+    "            except Exception as e:\n",
+    "                print(e)\n",
+    "                continue\n",
+    "    else:\n",
+    "        data = json.load(file)\n",
+    "        filepath = filename\n",
     "    df = pd.json_normalize(data['results'], 'alternatives').dropna(subset=['transcript', 'words']).drop(columns=['confidence', 'words'])\n",
     "    df = pd.DataFrame([' '.join(df['transcript'].to_list())], columns=['transcript'])\n",
     "    df['show'] = \"show_\" + filepath.split(\"show_\")[1].split(\"/\")[0]\n",
     "    df['episode'] = filepath.split(\"show_\")[1].split(\"/\")[1].split(\".\")[0]\n",
     "\n",
-    "    return df\n"
+    "    return df\n",
+    "\n",
+    "def join_metadata(df):\n",
+    "    filepath_metadata = 'podcasts-no-audio-13GB/metadata.tsv'\n",
+    "    root = str(pathlib.Path().absolute()).split(\"notebooks\")[0]\n",
+    "    path = root + filepath_metadata\n",
+    "    metadatadf = pd.read_csv(path, sep='\\t')\n",
+    "    transcript_meta_df = df.merge(metadatadf, how='inner', left_on=['show', 'episode'], right_on=['show_filename_prefix', 'episode_filename_prefix'])\n",
+    "    \n",
+    "    return transcript_meta_df\n",
+    "\n",
+    "def concat_and_upload(dflist, sourcefile):\n",
+    "    transcriptdf = pd.concat(dflist, axis=0)\n",
+    "    transcriptdf = join_metadata(transcriptdf)\n",
+    "    transcriptdf['source_file'] = sourcefile\n",
+    "    print(transcriptdf.shape)\n",
+    "    transcriptdf.to_csv('csv/testfile.csv') \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['.DS_Store', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9']"
-      ]
-     },
-     "execution_count": 310,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TREC\n",
+      "archive\n"
+     ]
     }
    ],
    "source": [
-    "directory = str(pathlib.Path().absolute()).split(\"notebooks\")[0] + 'podcasts-no-audio-13GB/spotify-podcasts-2020/podcasts-transcripts/0'\n",
+    "dir = os.listdir(directory)\n",
+    "dir.sort()\n",
+    "dir = dir[:11]\n",
     "\n",
-    "list = os.listdir(directory)\n",
-    "list.sort()\n",
-    "list[:11]"
+    "dflist = []\n",
+    "i = 0\n",
+    "for subdir in dir:\n",
+    "    subdirpath = os.path.join(directory, subdir)\n",
+    "    if os.path.isdir(subdirpath):\n",
+    "        print(subdir)\n",
+    "        for showdir in os.listdir(subdirpath):\n",
+    "            filepath = os.path.join(subdirpath, showdir)\n",
+    "            if os.path.isdir(filepath):\n",
+    "                for filename in os.listdir(filepath):\n",
+    "                    f = os.path.join(filepath, filename)\n",
+    "                    # checking if it is a file\n",
+    "                    if os.path.isfile(f):\n",
+    "                        dflist.append(parse_transcript(f))\n",
+    "                        i += 1\n",
+    "                        #if i%10 == 0:\n",
+    "                        #    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,6 +968,52 @@
     "df = pd.read_csv(path, index_col=0)\n",
     "\n",
     "write_to_s3(df, 'transcripts-0[0-9].csv', 'transcripts')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tarfile\n",
+    "import json\n",
+    "import sys\n",
+    "import os\n",
+    "import pathlib\n",
+    "import pandas as pd\n",
+    "\n",
+    "tarfiles = ['podcasts-transcripts-0to2.tar.gz', 'podcasts-transcripts-3to5.tar.gz', 'podcasts-transcripts-6to7.tar.gz']\n",
+    "\n",
+    "directory = str(pathlib.Path().absolute()).split(\"notebooks\")[0] + 'podcasts-no-audio-13GB/'\n",
+    "tar = tarfile.open(directory + tarfiles[0])\n",
+    "\n",
+    "df_list = []\n",
+    "tar_member = tar.next()\n",
+    "file_id = 1\n",
+    "while tar_member:\n",
+    "    file = tar.extractfile(tar_member)\n",
+    "    if file and tar_member.name.split(sep='.')[-1] == 'json':\n",
+    "        filename = tar_member.name\n",
+    "        transcriptdf = parse_transcript(filepath=None, file=file, filename=filename)\n",
+    "        df_list.append(transcriptdf)\n",
+    "    if len(df_list) == 1000:\n",
+    "        concat_and_upload(df_list, tarfiles[0])\n",
+    "        df_list = []\n",
+    "        file_id += 1\n",
+    "    tar_member = tar.next()\n",
+    "tar.close()\n",
+    "\n",
+    "\n",
+    "#directory + tarfiles[0]\n"
    ]
   }
  ],
