--- a/notebooks/json_parser.ipynb
+++ b/notebooks/json_parser.ipynb
@@ -1015,6 +1015,34 @@
     "\n",
     "#directory + tarfiles[0]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "read_from_s3() missing 1 required positional argument: 'filetype'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 8\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39ms3_utils\u001b[39;00m \u001b[39mimport\u001b[39;00m read_from_s3\n\u001b[1;32m      6\u001b[0m filename \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mpodcasts-transcripts-0to2-1.csv\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> 8\u001b[0m read_from_s3(filename)\n",
+      "\u001b[0;31mTypeError\u001b[0m: read_from_s3() missing 1 required positional argument: 'filetype'"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.insert(0, os.path.abspath('../src/data/'))\n",
+    "from s3_utils import read_from_s3\n",
+    "\n",
+    "filename = 'podcasts-transcripts-0to2-1.csv'\n",
+    "\n",
+    "read_from_s3(filename)"
+   ]
   }
  ],
  "metadata": {
