parser and ingestion for timestamped transcripts

--- a/notebooks/json_parser.ipynb
+++ b/notebooks/json_parser.ipynb
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1098,154 +1098,173 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>What's up guys? And welcome to the up nor trip...</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>29.9</td>\n",
-       "      <td>2</td>\n",
-       "      <td>show_0LaYlRViq9hVwwGykQLHd3</td>\n",
-       "      <td>4q9et9b1xeAJcN3FnUq1vN</td>\n",
+       "      <td>Hey, it's chill and hear some T were about to ...</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>17.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>show_0LLW1zdhSv1rrvGLxwaufG</td>\n",
+       "      <td>6ZCdBqyfWWRbv0mANL7OM1</td>\n",
        "      <td>podcasts-transcripts-0to2.tar.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Going to be about sports. I'm a big fan of the...</td>\n",
-       "      <td>30.1</td>\n",
-       "      <td>53.5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>show_0LaYlRViq9hVwwGykQLHd3</td>\n",
-       "      <td>4q9et9b1xeAJcN3FnUq1vN</td>\n",
+       "      <td>Hello. Hello, we're back with another episode...</td>\n",
+       "      <td>20.8</td>\n",
+       "      <td>50.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>show_0LLW1zdhSv1rrvGLxwaufG</td>\n",
+       "      <td>6ZCdBqyfWWRbv0mANL7OM1</td>\n",
        "      <td>podcasts-transcripts-0to2.tar.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Pretty much all the time every day of the wee...</td>\n",
-       "      <td>54.3</td>\n",
-       "      <td>79.3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>show_0LaYlRViq9hVwwGykQLHd3</td>\n",
-       "      <td>4q9et9b1xeAJcN3FnUq1vN</td>\n",
+       "      <td>Chinese owned buildings. Usually we don't hav...</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>79.8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>show_0LLW1zdhSv1rrvGLxwaufG</td>\n",
+       "      <td>6ZCdBqyfWWRbv0mANL7OM1</td>\n",
        "      <td>podcasts-transcripts-0to2.tar.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Getting drafted into the NBA from Canada more...</td>\n",
-       "      <td>80.2</td>\n",
-       "      <td>104.9</td>\n",
+       "      <td>But I think people would be like what street ...</td>\n",
+       "      <td>80.8</td>\n",
+       "      <td>110.3</td>\n",
        "      <td>2</td>\n",
-       "      <td>show_0LaYlRViq9hVwwGykQLHd3</td>\n",
-       "      <td>4q9et9b1xeAJcN3FnUq1vN</td>\n",
+       "      <td>show_0LLW1zdhSv1rrvGLxwaufG</td>\n",
+       "      <td>6ZCdBqyfWWRbv0mANL7OM1</td>\n",
        "      <td>podcasts-transcripts-0to2.tar.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Predominantly more the NFL this is going to b...</td>\n",
-       "      <td>106.1</td>\n",
-       "      <td>135.8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>show_0LaYlRViq9hVwwGykQLHd3</td>\n",
-       "      <td>4q9et9b1xeAJcN3FnUq1vN</td>\n",
+       "      <td>Kind of funny and at the same time endearing ...</td>\n",
+       "      <td>110.8</td>\n",
+       "      <td>139.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>show_0LLW1zdhSv1rrvGLxwaufG</td>\n",
+       "      <td>6ZCdBqyfWWRbv0mANL7OM1</td>\n",
        "      <td>podcasts-transcripts-0to2.tar.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Or yours last year, but I am a box fan becaus...</td>\n",
-       "      <td>136.0</td>\n",
-       "      <td>163.7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>show_0LaYlRViq9hVwwGykQLHd3</td>\n",
-       "      <td>4q9et9b1xeAJcN3FnUq1vN</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131</th>\n",
+       "      <td>I don't know. I think we talked about it befo...</td>\n",
+       "      <td>3808.3</td>\n",
+       "      <td>3838.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>show_0LLW1zdhSv1rrvGLxwaufG</td>\n",
+       "      <td>6ZCdBqyfWWRbv0mANL7OM1</td>\n",
        "      <td>podcasts-transcripts-0to2.tar.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>This year is going to be crazy for the NBA an...</td>\n",
-       "      <td>164.6</td>\n",
-       "      <td>194.2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>show_0LaYlRViq9hVwwGykQLHd3</td>\n",
-       "      <td>4q9et9b1xeAJcN3FnUq1vN</td>\n",
+       "      <th>132</th>\n",
+       "      <td>Something that they be curious to know, huh? ...</td>\n",
+       "      <td>3838.1</td>\n",
+       "      <td>3868.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>show_0LLW1zdhSv1rrvGLxwaufG</td>\n",
+       "      <td>6ZCdBqyfWWRbv0mANL7OM1</td>\n",
        "      <td>podcasts-transcripts-0to2.tar.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Talking about the latest news also voicing my...</td>\n",
-       "      <td>194.4</td>\n",
-       "      <td>223.7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>show_0LaYlRViq9hVwwGykQLHd3</td>\n",
-       "      <td>4q9et9b1xeAJcN3FnUq1vN</td>\n",
+       "      <th>133</th>\n",
+       "      <td>that if you get red really see, that means yo...</td>\n",
+       "      <td>3868.1</td>\n",
+       "      <td>3897.9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>show_0LLW1zdhSv1rrvGLxwaufG</td>\n",
+       "      <td>6ZCdBqyfWWRbv0mANL7OM1</td>\n",
        "      <td>podcasts-transcripts-0to2.tar.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>And maybe give me some ideas for the podcast ...</td>\n",
-       "      <td>224.3</td>\n",
-       "      <td>248.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>show_0LaYlRViq9hVwwGykQLHd3</td>\n",
-       "      <td>4q9et9b1xeAJcN3FnUq1vN</td>\n",
+       "      <th>134</th>\n",
+       "      <td>It's 20 everywhere Instagram Facebook Twitter...</td>\n",
+       "      <td>3898.7</td>\n",
+       "      <td>3927.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>show_0LLW1zdhSv1rrvGLxwaufG</td>\n",
+       "      <td>6ZCdBqyfWWRbv0mANL7OM1</td>\n",
        "      <td>podcasts-transcripts-0to2.tar.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>With drops and sound bites. So bear with me i...</td>\n",
-       "      <td>250.1</td>\n",
-       "      <td>279.2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>show_0LaYlRViq9hVwwGykQLHd3</td>\n",
-       "      <td>4q9et9b1xeAJcN3FnUq1vN</td>\n",
+       "      <th>135</th>\n",
+       "      <td>Good backyard. Oh, okay. Well, um, I forgot h...</td>\n",
+       "      <td>3928.1</td>\n",
+       "      <td>3955.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>show_0LLW1zdhSv1rrvGLxwaufG</td>\n",
+       "      <td>6ZCdBqyfWWRbv0mANL7OM1</td>\n",
        "      <td>podcasts-transcripts-0to2.tar.gz</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>136 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                          transcript  startTime  endTime  \\\n",
-       "0  What's up guys? And welcome to the up nor trip...        0.6     29.9   \n",
-       "1  Going to be about sports. I'm a big fan of the...       30.1     53.5   \n",
-       "2   Pretty much all the time every day of the wee...       54.3     79.3   \n",
-       "3   Getting drafted into the NBA from Canada more...       80.2    104.9   \n",
-       "4   Predominantly more the NFL this is going to b...      106.1    135.8   \n",
-       "5   Or yours last year, but I am a box fan becaus...      136.0    163.7   \n",
-       "6   This year is going to be crazy for the NBA an...      164.6    194.2   \n",
-       "7   Talking about the latest news also voicing my...      194.4    223.7   \n",
-       "8   And maybe give me some ideas for the podcast ...      224.3    248.0   \n",
-       "9   With drops and sound bites. So bear with me i...      250.1    279.2   \n",
+       "                                            transcript  startTime  endTime  \\\n",
+       "0    Hey, it's chill and hear some T were about to ...        2.1     17.1   \n",
+       "1     Hello. Hello, we're back with another episode...       20.8     50.5   \n",
+       "2     Chinese owned buildings. Usually we don't hav...       51.0     79.8   \n",
+       "3     But I think people would be like what street ...       80.8    110.3   \n",
+       "4     Kind of funny and at the same time endearing ...      110.8    139.9   \n",
+       "..                                                 ...        ...      ...   \n",
+       "131   I don't know. I think we talked about it befo...     3808.3   3838.0   \n",
+       "132   Something that they be curious to know, huh? ...     3838.1   3868.0   \n",
+       "133   that if you get red really see, that means yo...     3868.1   3897.9   \n",
+       "134   It's 20 everywhere Instagram Facebook Twitter...     3898.7   3927.2   \n",
+       "135   Good backyard. Oh, okay. Well, um, I forgot h...     3928.1   3955.0   \n",
        "\n",
-       "   speakerTag                         show                 episode  \\\n",
-       "0           2  show_0LaYlRViq9hVwwGykQLHd3  4q9et9b1xeAJcN3FnUq1vN   \n",
-       "1           2  show_0LaYlRViq9hVwwGykQLHd3  4q9et9b1xeAJcN3FnUq1vN   \n",
-       "2           2  show_0LaYlRViq9hVwwGykQLHd3  4q9et9b1xeAJcN3FnUq1vN   \n",
-       "3           2  show_0LaYlRViq9hVwwGykQLHd3  4q9et9b1xeAJcN3FnUq1vN   \n",
-       "4           2  show_0LaYlRViq9hVwwGykQLHd3  4q9et9b1xeAJcN3FnUq1vN   \n",
-       "5           2  show_0LaYlRViq9hVwwGykQLHd3  4q9et9b1xeAJcN3FnUq1vN   \n",
-       "6           2  show_0LaYlRViq9hVwwGykQLHd3  4q9et9b1xeAJcN3FnUq1vN   \n",
-       "7           2  show_0LaYlRViq9hVwwGykQLHd3  4q9et9b1xeAJcN3FnUq1vN   \n",
-       "8           2  show_0LaYlRViq9hVwwGykQLHd3  4q9et9b1xeAJcN3FnUq1vN   \n",
-       "9           2  show_0LaYlRViq9hVwwGykQLHd3  4q9et9b1xeAJcN3FnUq1vN   \n",
+       "     speakerTag                         show                 episode  \\\n",
+       "0             1  show_0LLW1zdhSv1rrvGLxwaufG  6ZCdBqyfWWRbv0mANL7OM1   \n",
+       "1             1  show_0LLW1zdhSv1rrvGLxwaufG  6ZCdBqyfWWRbv0mANL7OM1   \n",
+       "2             3  show_0LLW1zdhSv1rrvGLxwaufG  6ZCdBqyfWWRbv0mANL7OM1   \n",
+       "3             2  show_0LLW1zdhSv1rrvGLxwaufG  6ZCdBqyfWWRbv0mANL7OM1   \n",
+       "4             1  show_0LLW1zdhSv1rrvGLxwaufG  6ZCdBqyfWWRbv0mANL7OM1   \n",
+       "..          ...                          ...                     ...   \n",
+       "131           3  show_0LLW1zdhSv1rrvGLxwaufG  6ZCdBqyfWWRbv0mANL7OM1   \n",
+       "132           3  show_0LLW1zdhSv1rrvGLxwaufG  6ZCdBqyfWWRbv0mANL7OM1   \n",
+       "133           3  show_0LLW1zdhSv1rrvGLxwaufG  6ZCdBqyfWWRbv0mANL7OM1   \n",
+       "134           1  show_0LLW1zdhSv1rrvGLxwaufG  6ZCdBqyfWWRbv0mANL7OM1   \n",
+       "135           1  show_0LLW1zdhSv1rrvGLxwaufG  6ZCdBqyfWWRbv0mANL7OM1   \n",
        "\n",
-       "                        source_file  \n",
-       "0  podcasts-transcripts-0to2.tar.gz  \n",
-       "1  podcasts-transcripts-0to2.tar.gz  \n",
-       "2  podcasts-transcripts-0to2.tar.gz  \n",
-       "3  podcasts-transcripts-0to2.tar.gz  \n",
-       "4  podcasts-transcripts-0to2.tar.gz  \n",
-       "5  podcasts-transcripts-0to2.tar.gz  \n",
-       "6  podcasts-transcripts-0to2.tar.gz  \n",
-       "7  podcasts-transcripts-0to2.tar.gz  \n",
-       "8  podcasts-transcripts-0to2.tar.gz  \n",
-       "9  podcasts-transcripts-0to2.tar.gz  "
+       "                          source_file  \n",
+       "0    podcasts-transcripts-0to2.tar.gz  \n",
+       "1    podcasts-transcripts-0to2.tar.gz  \n",
+       "2    podcasts-transcripts-0to2.tar.gz  \n",
+       "3    podcasts-transcripts-0to2.tar.gz  \n",
+       "4    podcasts-transcripts-0to2.tar.gz  \n",
+       "..                                ...  \n",
+       "131  podcasts-transcripts-0to2.tar.gz  \n",
+       "132  podcasts-transcripts-0to2.tar.gz  \n",
+       "133  podcasts-transcripts-0to2.tar.gz  \n",
+       "134  podcasts-transcripts-0to2.tar.gz  \n",
+       "135  podcasts-transcripts-0to2.tar.gz  \n",
+       "\n",
+       "[136 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('csv/transcript_timestamps-podcasts-transcripts-0to2-1.csv', index_col=0)\n",
-    "df.head(10)\n"
+    "episodes = df.episode.unique()\n",
+    "grouped = df.groupby(df.episode)\n",
+    "df_new = grouped.get_group(episodes[10])\n",
+    "df_new"
    ]
   }
  ],
