ui changes and "get next 3 options"

--- a/notebooks/timestamp_embeddings.ipynb
+++ b/notebooks/timestamp_embeddings.ipynb
@@ -8102,6 +8102,27 @@
       "source": [
         "timestamp_collection.peek()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'odjlkok'"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "test = \"odjLKOK\"\n",
+        "test.lower()"
+      ]
     }
   ],
   "metadata": {
