--- a/notebooks/datasetToEmbeddings-Oskari.ipynb
+++ b/notebooks/datasetToEmbeddings-Oskari.ipynb
@@ -347,21 +347,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "load INSTRUCTOR_Transformer\n",
-            "max_seq_length  512\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# get collection from server\n",
-        "collection_name = \"transcript-timestamps\" # transcripts-2\n",
+        "collection_name = \"transcripts-2\" # transcripts-2\n",
         "# model = INSTRUCTOR('hkunlp/instructor-base')\n",
         "model = INSTRUCTOR('hkunlp/instructor-large')\n",
         "server_ip = os.getenv('CHROMA_SERVER_IP')\n",
@@ -371,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -385,17 +376,23 @@
         {
           "data": {
             "text/plain": [
-              "39146"
+              "{'ids': [[]],\n",
+              " 'distances': [[]],\n",
+              " 'embeddings': None,\n",
+              " 'metadatas': [[]],\n",
+              " 'documents': [[]],\n",
+              " 'uris': None,\n",
+              " 'data': None}"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# get collection from server\n",
-        "collection_name = \"transcript-timestamps\" # transcripts-2\n",
+        "collection_name = \"transcripts-2\" # transcripts-2\n",
         "# model = INSTRUCTOR('hkunlp/instructor-base')\n",
         "# model = INSTRUCTOR('hkunlp/instructor-large')\n",
         "server_ip = os.getenv('CHROMA_SERVER_IP')\n",
@@ -403,38 +400,22 @@
         "ef = embedding_functions.InstructorEmbeddingFunction(model_name=\"hkunlp/instructor-large\")\n",
         "collection = client.get_collection(name=collection_name, embedding_function=ef)\n",
         "\n",
-        "# Try querying the database\n",
-        "#query_texts=[[\"Represent the Podcast query for retrieving relevant paragraphs: \",\"Patriots\"]]\n",
-        "#query_embedding = model.encode(query_texts).tolist()\n",
-        "#collection.query(\n",
-        "#    query_embeddings=query_embedding,\n",
-        "#    n_results=5,\n",
-        "#    where={\"episode\": \"2yJYDUNmumLmTck8ornY1J\"},\n",
-        "#)\n",
+        "\n",
         "#client.list_collections()\n",
-        "collection.count()\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "S-78qkZIXCu4"
-      },
-      "outputs": [],
-      "source": [
-        "transcripts_df[['episode_description']].to_dict(orient='records')"
+        "#collection.count()\n"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 32,
-      "metadata": {},
+      "metadata": {
+        "id": "S-78qkZIXCu4"
+      },
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "1"
+              "'9'"
             ]
           },
           "execution_count": 32,
@@ -443,7 +424,26 @@
         }
       ],
       "source": [
-        "3%2"
+        "# Try querying the database\n",
+        "query_texts=[[\"Represent the statement for retrieving Podcast Transcripts: \",\"NFL football\"]]\n",
+        "query_embedding = model.encode(query_texts).tolist()\n",
+        "res = collection.query(\n",
+        "    query_embeddings=query_embedding,\n",
+        "    n_results=9,\n",
+        "    #where={\"episode\": \"2yJYDUNmumLmTck8ornY1J\"},\n",
+        ")\n",
+        "\n",
+        "#res[\"metadatas\"][0][3:6]\n",
+        "#res[\"ids\"] = res[\"ids\"][0][3:6]\n",
+        "#res[\"metadatas\"] = res[\"metadatas\"][0][3:6]\n",
+        "for k in res.keys():\n",
+        "    if res[k]:\n",
+        "        res[k] = res[k][0][3:6]\n",
+        "\n",
+        "result_df = pd.json_normalize(res[\"metadatas\"][0])\n",
+        "result_df[\"episode_id\"] = res[\"ids\"][0]\n",
+        "result_df[6-3:6].reset_index(drop=True)\n",
+        "str(9)"
       ]
     },
     {
@@ -641,7 +641,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.10.10"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
