--- a/notebooks/datasetToEmbeddings-Oskari.ipynb
+++ b/notebooks/datasetToEmbeddings-Oskari.ipynb
@@ -362,21 +362,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'os' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m collection_name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mtranscript-timestamps\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m# transcripts-2\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# model = INSTRUCTOR('hkunlp/instructor-base')\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m# model = INSTRUCTOR('hkunlp/instructor-large')\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m server_ip \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mgetenv(\u001b[39m'\u001b[39m\u001b[39mCHROMA_SERVER_IP\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      6\u001b[0m client \u001b[39m=\u001b[39m chromadb\u001b[39m.\u001b[39mHttpClient(host\u001b[39m=\u001b[39mserver_ip, port\u001b[39m=\u001b[39m\u001b[39m8000\u001b[39m)\n\u001b[1;32m      7\u001b[0m ef \u001b[39m=\u001b[39m embedding_functions\u001b[39m.\u001b[39mInstructorEmbeddingFunction(model_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mhkunlp/instructor-large\u001b[39m\u001b[39m\"\u001b[39m)\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# get collection from server\n",
         "collection_name = \"transcript-timestamps\" # transcripts-2\n",
@@ -389,7 +377,27 @@
         "\n",
         "\n",
         "#client.list_collections()\n",
-        "collection.count()\n"
+        "collection.get(include=[\"metadatas\"])\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1000"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "len(pd.DataFrame(collection.get(include=[\"metadatas\"])[\"metadatas\"]).episode.unique())"
       ]
     },
     {
